@@ -35,6 +35,7 @@ import org.omegat.gui.common.EntryInfoPane;
 import org.omegat.gui.main.DockableScrollPane;
 import org.omegat.gui.main.MainWindow;
 import org.omegat.util.OStrings;
+import org.omegat.util.gui.AlwaysVisibleCaret;
 import org.omegat.util.gui.UIThreadsUtil;
 
 /**
@@ -56,6 +57,7 @@ public class CommentsTextArea extends EntryInfoPane<SourceTextEntry> implements 
         mw.addDockable(new DockableScrollPane("COMMENTS", title, this, true));
 
         setEditable(false);
+        AlwaysVisibleCaret.apply(this);
         this.setText(EXPLANATION);
         setMinimumSize(new Dimension(100, 50));
 
